docs/_static/css/theme_overrides.css
/* ... */
@media (max-width: 768px) {
   .wy-side-nav-search, .wy-nav-top {
	background-color: #fff;
}
}


.intro {    
    border: none !important;
}

.intro td{
    border-left: none !important;
    border-bottom: 0px !important;
}

.intro-bgclr {
	background-color: aliceblue !important;
	border: none !important;
}

.intro-bgclr td{
    border-left: none !important;
    border-bottom: 0px !important;
}

table.table-bgcolor {
    background-color: #cac7c757 !important;
}

h1, h2, .rst-content .toctree-wrapper p.caption, h3, h4, h5, h6, legend
{
	font-family: 'Source Sans Pro Regular' !important;
}


.icon-home img {
	width:150px !important;
}
.wy-side-nav-search .version {
	display: none;
}
.new-nav {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 78px;
	background: #fff;
	z-index: 999;
	border-bottom: 2px solid #e9e6e7;
}
.new-nav .logo {
	float: left;
	width: 155px !important;
	position: absolute;
	top: 0px;
	left: 35px;
}
.themetitle {
	color:  #928285;
	font-size: 20px;
	position: absolute;
    top: 24px;
    left: 243px;
}
.top-search {
	float: right;
	margin:0px 20px 0 0px;	
	width: 100%;
	max-width: 520px;
}
.top-search input {
	width: 100%;
	outline: none !important;
	box-shadow: none !important;
	border:1px solid #ccc !important;
}
.wy-breadcrumbs li a {
	color: #3780cb !important;
}
.main-nav-top {
	float: right;
}
.nav-left {
	width: 35%;
	float: left;
	min-height: 1px;
}
.top-nav {
	float: left;
	margin: 25px 0 0 0px;
	width: 65%;
	padding-left: 20px;
}
.top-nav hr {
	display: none !important;
}
.wy-grid-for-nav {
	padding-top:78px;
}

.wy-nav-side {
	background: #f4f2f3 !important;
	padding-top: 78px;
}
.wy-menu-vertical a {
	color: #000;
}
.wy-menu-vertical a:hover {
    background-color: #fff !important;
    color:#AB337A !important;   
}
.desk-hide {display: none !important;}
.mob-hide {display: block !important;}

.wy-menu-vertical {
	padding-top: 30px;
}
.wy-breadcrumbs-aside {
	margin-right:15px;
}

.wy-side-nav-search {
	display: none !important;
}

.cirrent-footer {

}

.socialbar-footer {
    background-color: #928285;
    text-align: center;
    padding: 15px 0 25px 0
}

@media (max-width: 1023px) {
    .socialbar-footer {
        padding:15px 0
    }
}

.socialbar-footer span {
    color: #fff;
    vertical-align: middle;
    padding: 0 16px 0 10px
}

@media (max-width: 1023px) {
    .socialbar-footer .followus {
        display:none
    }
}

.socialbar-footer .glyphicon {
    font-size: 27px;
    padding: 0 10px
}

.socialbar-footer a .glyphicon:hover {
    color: #8cb1cc
}

.socialbar-footer .popup-wrapper {
    display: inline-block;
    cursor: pointer
}

.socialbar-footer .popup-wrapper.popup-visible .hover-wrapper,.socialbar-footer .popup-wrapper.popup-visible:before {
    visibility: visible
}

.socialbar-footer .popup-wrapper.popup-visible .glyphicon {
    color: #8cb1cc
}

.socialbar-footer .hover-wrapper {
    position: absolute;
    margin-top: -999px;
    padding-bottom: 35px;
    visibility: hidden;
    -webkit-transform: translateX(-50%);
    transform: translateX(-50%);
    z-index: 1010
}

.socialbar-footer .social-popup {
    background-color: #fff;
    border: 2px solid #928285;
    min-width: 200px;
    position: relative
}
/* ... */

